--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 		<!-- Misc -->
 		<lucene-core.version>9.12.1</lucene-core.version>
 		<commons-csv.version>1.14.1</commons-csv.version>
+		<commons-collections4.version>4.5.0</commons-collections4.version>
 
 		<!-- Maven Properties -->
 		<skipITs>true</skipITs>
@@ -119,6 +120,11 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-csv</artifactId>
 				<version>${commons-csv.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-collections4</artifactId>
+				<version>${commons-collections4.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -184,6 +190,10 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
 		</dependency>
 
 		<!-- Logging Dependencies -->
